pluma_parser/tests/snapshots/parse_success__chain_calls_across_lines.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "\"hello\"\n  .. f1 1\n  ..f2 2"
---

=== Source ===
"hello"
  .. f1 1
  ..f2 2

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        1,
        26,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                1,
                26,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        1,
                        26,
                    ),
                    kind: Call(
                        CallNode {
                            pos: (
                                1,
                                26,
                            ),
                            callee: ExprNode {
                                pos: (
                                    1,
                                    17,
                                ),
                                kind: MethodAccess {
                                    receiver: ExprNode {
                                        pos: (
                                            1,
                                            17,
                                        ),
                                        kind: Call(
                                            CallNode {
                                                pos: (
                                                    1,
                                                    17,
                                                ),
                                                callee: ExprNode {
                                                    pos: (
                                                        1,
                                                        6,
                                                    ),
                                                    kind: MethodAccess {
                                                        receiver: ExprNode {
                                                            pos: (
                                                                1,
                                                                6,
                                                            ),
                                                            kind: Literal(
                                                                LiteralNode {
                                                                    pos: (
                                                                        1,
                                                                        6,
                                                                    ),
                                                                    kind: Str(
                                                                        "hello",
                                                                    ),
                                                                },
                                                            ),
                                                            typ: Unknown,
                                                        },
                                                        method_parts: [
                                                            IdentifierNode {
                                                                pos: (
                                                                    13,
                                                                    15,
                                                                ),
                                                                name: "f1",
                                                            },
                                                        ],
                                                    },
                                                    typ: Unknown,
                                                },
                                                args: [
                                                    ExprNode {
                                                        pos: (
                                                            16,
                                                            17,
                                                        ),
                                                        kind: Literal(
                                                            LiteralNode {
                                                                pos: (
                                                                    16,
                                                                    17,
                                                                ),
                                                                kind: IntDecimal(
                                                                    1,
                                                                ),
                                                            },
                                                        ),
                                                        typ: Unknown,
                                                    },
                                                ],
                                                typ: Unknown,
                                            },
                                        ),
                                        typ: Unknown,
                                    },
                                    method_parts: [
                                        IdentifierNode {
                                            pos: (
                                                22,
                                                24,
                                            ),
                                            name: "f2",
                                        },
                                    ],
                                },
                                typ: Unknown,
                            },
                            args: [
                                ExprNode {
                                    pos: (
                                        25,
                                        26,
                                    ),
                                    kind: Literal(
                                        LiteralNode {
                                            pos: (
                                                25,
                                                26,
                                            ),
                                            kind: IntDecimal(
                                                2,
                                            ),
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ],
                            typ: Unknown,
                        },
                    ),
                    typ: Unknown,
                },
            ),
        },
    ],
}

