pluma_parser/tests/snapshots/parse_success__def_func_return_type.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "def hello () -> { A -> B } {\n  { x => y }\n}"
---

=== Source ===
def hello () -> { A -> B } {
  { x => y }
}

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        43,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                43,
            ),
            kind: Def(
                DefNode {
                    pos: (
                        0,
                        43,
                    ),
                    kind: Function {
                        signature: [
                            (
                                IdentifierNode {
                                    pos: (
                                        4,
                                        9,
                                    ),
                                    name: "hello",
                                },
                                TypeExprNode {
                                    pos: (
                                        10,
                                        12,
                                    ),
                                    kind: EmptyTuple,
                                    typ: Unknown,
                                },
                            ),
                        ],
                    },
                    return_type: Some(
                        TypeExprNode {
                            pos: (
                                16,
                                26,
                            ),
                            kind: Func(
                                TypeExprNode {
                                    pos: (
                                        18,
                                        19,
                                    ),
                                    kind: Single(
                                        TypeIdentifierNode {
                                            pos: (
                                                18,
                                                19,
                                            ),
                                            name: "A",
                                            generics: [],
                                        },
                                    ),
                                    typ: Unknown,
                                },
                                TypeExprNode {
                                    pos: (
                                        23,
                                        24,
                                    ),
                                    kind: Single(
                                        TypeIdentifierNode {
                                            pos: (
                                                23,
                                                24,
                                            ),
                                            name: "B",
                                            generics: [],
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ),
                            typ: Unknown,
                        },
                    ),
                    generic_type_constraints: [],
                    params: [],
                    body: [
                        StatementNode {
                            pos: (
                                31,
                                41,
                            ),
                            kind: Expr(
                                ExprNode {
                                    pos: (
                                        31,
                                        41,
                                    ),
                                    kind: Block {
                                        params: [
                                            IdentifierNode {
                                                pos: (
                                                    33,
                                                    34,
                                                ),
                                                name: "x",
                                            },
                                        ],
                                        body: [
                                            StatementNode {
                                                pos: (
                                                    38,
                                                    39,
                                                ),
                                                kind: Expr(
                                                    ExprNode {
                                                        pos: (
                                                            38,
                                                            39,
                                                        ),
                                                        kind: Identifier(
                                                            IdentifierNode {
                                                                pos: (
                                                                    38,
                                                                    39,
                                                                ),
                                                                name: "y",
                                                            },
                                                        ),
                                                        typ: Unknown,
                                                    },
                                                ),
                                            },
                                        ],
                                    },
                                    typ: Unknown,
                                },
                            ),
                        },
                    ],
                },
            ),
        },
    ],
}

