pluma_parser/tests/snapshots/parse_success__def_func_taking_tuple_arg.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "def hello { (A, B) -> C } {\n  x => x\n}"
---

=== Source ===
def hello { (A, B) -> C } {
  x => x
}

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        38,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                38,
            ),
            kind: Def(
                DefNode {
                    pos: (
                        0,
                        38,
                    ),
                    visibility: Public,
                    kind: Function {
                        signature: [
                            (
                                IdentifierNode {
                                    pos: (
                                        4,
                                        9,
                                    ),
                                    name: "hello",
                                },
                                TypeExprNode {
                                    pos: (
                                        10,
                                        25,
                                    ),
                                    kind: Func(
                                        TypeExprNode {
                                            pos: (
                                                12,
                                                18,
                                            ),
                                            kind: Tuple(
                                                [
                                                    TypeExprNode {
                                                        pos: (
                                                            13,
                                                            14,
                                                        ),
                                                        kind: Single(
                                                            TypeIdentifierNode {
                                                                pos: (
                                                                    13,
                                                                    14,
                                                                ),
                                                                name: "A",
                                                                generics: [],
                                                            },
                                                        ),
                                                        typ: Unknown,
                                                    },
                                                    TypeExprNode {
                                                        pos: (
                                                            16,
                                                            17,
                                                        ),
                                                        kind: Single(
                                                            TypeIdentifierNode {
                                                                pos: (
                                                                    16,
                                                                    17,
                                                                ),
                                                                name: "B",
                                                                generics: [],
                                                            },
                                                        ),
                                                        typ: Unknown,
                                                    },
                                                ],
                                            ),
                                            typ: Unknown,
                                        },
                                        TypeExprNode {
                                            pos: (
                                                22,
                                                23,
                                            ),
                                            kind: Single(
                                                TypeIdentifierNode {
                                                    pos: (
                                                        22,
                                                        23,
                                                    ),
                                                    name: "C",
                                                    generics: [],
                                                },
                                            ),
                                            typ: Unknown,
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ),
                        ],
                    },
                    return_type: None,
                    generic_type_constraints: [],
                    params: [
                        IdentifierNode {
                            pos: (
                                30,
                                31,
                            ),
                            name: "x",
                        },
                    ],
                    body: [
                        StatementNode {
                            pos: (
                                35,
                                36,
                            ),
                            kind: Expr(
                                ExprNode {
                                    pos: (
                                        35,
                                        36,
                                    ),
                                    kind: Identifier(
                                        IdentifierNode {
                                            pos: (
                                                35,
                                                36,
                                            ),
                                            name: "x",
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ),
                        },
                    ],
                },
            ),
        },
    ],
}

